# vital_multiscale

./: Dockerfile  README.md  environment.yml  run.sh
CCO/: CMakeCache.txt  CMakeLists.txt  Makefile  artery  cmake_install.cmake  ex1_simple3D_1.cco  ex1_simple3D_1.vtp  ex1_simple3D_2.cco  ex1_simple3D_2.vtp  ex_3D.vtk  ex_3D_1.vtk  ex_3D_2.vtk  example_1  example_1.cpp  readme.txt  vein
CCO/outputs/: ex1_simple2D.cco  ex1_simple2D.vtp
MicrovascularModelling/: .gitignore  README.md  environment.yml  gmsh_tester.py  instance_lock.txt  mesh1D.txt  pyrightconfig.json
MicrovascularModelling/classes/: Class_template.py  ConfigClass.py  GeometryClasses.py  GetFEMClasses.py  GrowthClasses.py  MatrixHandlerClasses.py
MicrovascularModelling/config/Cases/: VITAL.json  vegf_anastomosis.json  vegf_bifurcation.json  vegf_complex.json  vegf_complex_rand.json
MicrovascularModelling/config/Weights/: config_0.json  config_1.json  config_10.json  config_100.json  config_101.json  config_102.json  config_103.json  (+493 more)
MicrovascularModelling/meshes/: ratio_1.4.msh
MicrovascularModelling/scripts/: VITAL.py  base_lab_example.py  growth_search_diagrams.py  growth_search_experiment.py  multiscale.py  p_control_diagrams.py  p_control_experiment.py  sprout_adaptation_diagrams.py  sprout_adaptation_experiment.py  sprout_ratio_diagrams.py  sprout_ratio_experiment.py  sprout_strategy_diagrams.py  sprout_strategy_experiment.py  vegf_threshold_diagrams.py  vegf_threshold_experiment.py  vtk_to_tree.py
MicrovascularModelling/tree_files/: junction_list.json  node_list.json  segment_list.json
(+11 files in other folders)
